# SFML-Extension

./: .gitignore  CMakeLists.txt  README.md  TODO.md
.github/workflows/: build_docs.yml  cmake.yml  linux_build.yml  mac_build.yml  windows_build.yml
Manual Tests/Animation_Test/: CMakeLists.txt
Manual Tests/Animation_Test/src/: main.cpp
Manual Tests/AudioManagers_Test/: CMakeLists.txt
Manual Tests/AudioManagers_Test/src/: main.cpp
Manual Tests/Color_Test/: CMakeLists.txt
Manual Tests/Gradient_Test/: CMakeLists.txt
Manual Tests/Gradient_Test/src/: main.cpp
Manual Tests/GraphicalManagers_Test/: CMakeLists.txt
Manual Tests/GraphicalManagers_Test/src/: main.cpp
Manual Tests/Joystick_Test/: CMakeLists.txt
Manual Tests/Joystick_Test/src/: main.cpp
Manual Tests/KeyboardAndMouse_Test/: CMakeLists.txt
Manual Tests/KeyboardAndMouse_Test/src/: main.cpp
Manual Tests/Math_Test/: CMakeLists.txt
Manual Tests/Math_Test/src/: main.cpp
Manual Tests/OptionManager_Test/: CMakeLists.txt  options.json  options.txt
Manual Tests/OptionManager_Test/src/: main.cpp
Manual Tests/SceneManager_Test/: CMakeLists.txt
Manual Tests/SceneManager_Test/include/: FirstScene.hpp  PlayerController.hpp  SecondScene.hpp
Manual Tests/SceneManager_Test/src/: FirstScene.cpp  PlayerController.cpp  SecondScene.cpp  main.cpp
Manual Tests/Shape_Test/: CMakeLists.txt
Manual Tests/Shape_Test/src/: main.cpp
Manual Tests/StopWatch_Test/: CMakeLists.txt
Manual Tests/Vector2_Test/: CMakeLists.txt
Manual Tests/Vector3_Test/: CMakeLists.txt
cmake/: config.cmake.in
docs/: Doxyfile.in
examples/Animation_Example/: CMakeLists.txt
examples/Animation_Example/src/: main.cpp
examples/AudioManagers_Example/: CMakeLists.txt
examples/AudoManagers_Example/: CMakeLists.txt
examples/AudoManagers_Example/src/: main.cpp
examples/Color_Example/: CMakeLists.txt
examples/Color_Example/src/: main.cpp
examples/Gradient_Example/: CMakeLists.txt
examples/Gradient_Example/src/: main.cpp
examples/GraphicalManagers_Example/: CMakeLists.txt
examples/GraphicalManagers_Example/src/: main.cpp
examples/Joystick_Example/: CMakeLists.txt
examples/Joystick_Example/src/: main.cpp
examples/KeyboardAndMouse_Example/: CMakeLists.txt
examples/KeyboardAndMouse_Example/src/: main.cpp
examples/Math_Example/: CMakeLists.txt
examples/Math_Example/src/: main.cpp
examples/OptionManager_Example/: CMakeLists.txt
examples/RoundedRectangleExample/: CMakeLists.txt
examples/RoundedRectangleExample/src/: main.cpp
examples/SceneManager_Example/: CMakeLists.txt
examples/SceneManager_Example/include/: FirstScene.hpp  SecondScene.hpp
examples/SceneManager_Example/src/: FirstScene.cpp  SecondScene.cpp
examples/ShapeExamples/src/: main.cpp
examples/Shape_Example/: CMakeLists.txt
examples/StopWatchExample/: CMakeLists.txt
examples/StopWatch_Example/: CMakeLists.txt
examples/StopWatch_Example/src/: main.cpp
examples/TextureManager_Example/: CMakeLists.txt
examples/TextureManager_Example/src/: main.cpp
examples/Vector2_Example/: CMakeLists.txt
examples/Vector2_Example/src/: main.cpp
examples/Vector3_Example/: CMakeLists.txt
examples/Vector3_Example/src/: main.cpp
include/SFEX/: Config.hpp  General.hpp  Graphics.hpp  Managers.hpp  Numeric.hpp  SFEX.hpp
include/SFEX/General/: FilteringMethods.hpp  GameBehaviour.hpp  GameBehaviour.inl  GameComponent.hpp  GameObject.hpp  GameObject.inl  Joystick.hpp  Keyboard.hpp  Listener.hpp  Mouse.hpp  Multitype.hpp  Scene.hpp  SceneBase.hpp  Scheduler.hpp  Scheduler.inl  Singleton.hpp  StaticClass.hpp  Stopwatch.hpp
include/SFEX/Graphics/: Animation.hpp  Color.hpp  Ellipse.hpp  RoundedRectangle.hpp  Squircle.hpp  Star.hpp
include/SFEX/Managers/: AnimationManager.hpp  Filtering.hpp  ManagerBase.hpp  ManagerBase.inl  MangerBase.hpp  MusicManager.hpp  OptionManager.hpp  SceneManager.hpp  SoundManager.hpp  SpriteManager.hpp  TextureManager.hpp
include/SFEX/Numeric/: AngleSystem.hpp  Gradient.hpp  Gradient.inl  Math.hpp  Math.inl  Vector.hpp  Vector.inl  Vector2.hpp  Vector2.inl  Vector3.hpp  Vector3.inl
src/SFEX/General/: GameBehaviour.cpp  GameComponent.cpp  GameObject.cpp  Joystick.cpp  Keyboard.cpp  Listener.cpp  Mouse.cpp  Multitype.cpp  Scene.cpp  Singleton.cpp  Stopwatch.cpp
src/SFEX/Graphics/: Animation.cpp  Color.cpp  Ellipse.cpp  RoundedRectangle.cpp  Squircle.cpp  Star.cpp
src/SFEX/Managers/: AnimationManager.cpp  ManagerBase.cpp  MusicManager.cpp  OptionManager.cpp  SceneManager.cpp  SoundManager.cpp  SpriteManager.cpp  TextureManager.cpp
src/SFEX/Numeric/: AngleSystem.cpp  Gradient.cpp  Math.cpp  Vector2.cpp  Vector3.cpp
tests/: CMakeLists.txt  multitype_test.cpp  optionmanager_test.cpp  scheduler_test.cpp  vector2_test.cpp  vector2test.cpp  vector3test.cpp  vector_test.cpp
